:sparkles: Vista de About y Juego | :sparkles: Endpoint de Info de Juego + Heartbeat para cronjob
